<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1080" >
    <!-- android:weightSum="720" > -->

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="360" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="104" >

        <include layout="@layout/status_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="616"
        android:orientation="horizontal"
        android:weightSum="2100" >

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="178"
            android:visibility="invisible"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:src="@drawable/bw_divider1" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="480"
            android:orientation="vertical"
            android:weightSum="616">

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="20"
                android:visibility="invisible"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="80"
                android:textSize="@dimen/bwSmallTextSize"
                android:textColor="@color/bw_text_title"
                android:text="@string/bt_tips"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/bt_status"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="80"
                android:textSize="@dimen/bwBigTextSize"
                android:textColor="@color/bw_text_main"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/bt_name"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="100"
                android:textSize="@dimen/bwTextSize"
                android:textColor="@color/bw_text_status"
                android:gravity="center"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="100"
                android:visibility="invisible"/>

            <ImageButton
                android:id="@+id/bt_enabler"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="78"
                android:layout_gravity="center"
                android:background="?android:selectableItemBackground"
                android:scaleType="fitCenter"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="55"
                android:visibility="invisible"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="540"
            android:orientation="horizontal"
            android:weightSum="540" >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:src="@drawable/bw_divider1" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="538"
                android:orientation="vertical"
                android:weightSum="616">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="20"
                    android:visibility="invisible"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="80"
                    android:textSize="@dimen/bwSmallTextSize"
                    android:textColor="@color/bw_text_title"
                    android:text="@string/bt_saved"
                    android:gravity="center"
                    />

                <ListView
                    android:id="@+id/bt_saved_list"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="461"
                    android:scrollbars="none" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="55"
                    android:visibility="invisible"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="540"
            android:orientation="horizontal"
            android:weightSum="540" >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:src="@drawable/bw_divider1" />

            <LinearLayout
                android:id="@+id/bt_searched_layout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="538"
                android:orientation="vertical"
                android:weightSum="616">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="20"
                    android:visibility="invisible"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="80"
                    android:textSize="@dimen/bwSmallTextSize"
                    android:textColor="@color/bw_text_title"
                    android:text="@string/bt_searched"
                    android:gravity="center"
                    />

                <ListView
                    android:id="@+id/bt_searched_list"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="461"
                    android:scrollbars="none" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="55"
                    android:visibility="invisible"/>

            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="360"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:src="@drawable/bw_bluetooth_bg" />

    </LinearLayout>

</LinearLayout>